@@ -1,15 +1,15 @@
 package com.example.backend.service;
 
-import com.example.backend.dto.ContactRequestDto;
-import com.example.backend.dto.ContactResponseDto;
-import com.example.backend.dto.EmailDto;
-import com.example.backend.dto.PhoneDto;
+import com.example.backend.dto.*;
 import com.example.backend.entity.Contact;
 import com.example.backend.entity.Email;
 import com.example.backend.entity.Phone;
 import com.example.backend.entity.User;
 import com.example.backend.exception.ResourceNotFoundException;
+import com.example.backend.exception.UnauthorizedAccessException;
 import com.example.backend.repository.ContactRepository;
+import com.example.backend.repository.EmailRepository;
+import com.example.backend.repository.PhoneRepository;
 import com.example.backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,7 +20,6 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,134 +29,185 @@ import java.util.stream.Collectors;
 public class ContactServiceImpl implements ContactService {
 
     private final ContactRepository contactRepository;
+    private final EmailRepository emailRepository;
+    private final PhoneRepository phoneRepository;
     private final UserRepository userRepository;
 
     @Override
     @Transactional(readOnly = true)
-    public Page<ContactResponseDto> getAllContacts(String search, int page, int size, String sortBy, String sortDir, String userEmail) {
-        User user = getUserByEmail(userEmail);
+    public Page<ContactResponseDto> getAllContacts(Long userId, String search, int page, int size, String sortBy, String sortDir) {
+        log.info("Fetching contacts for user: {} with search='{}', page={}, size={}, sortBy={}, sortDir={}", userId, search, page, size, sortBy, sortDir);
 
-        Sort sort = sortDir.equalsIgnoreCase("desc")
-                ? Sort.by(sortBy).descending()
-                : Sort.by(sortBy).ascending();
+        String sortField = (sortBy == null || sortBy.isBlank()) ? "firstName" : sortBy;
+        Sort.Direction direction = "desc".equalsIgnoreCase(sortDir) ? Sort.Direction.DESC : Sort.Direction.ASC;
+        Pageable pageable = PageRequest.of(page, size, Sort.by(direction, sortField));
 
-        Pageable pageable = PageRequest.of(page, size, sort);
-
-        Page<Contact> contactPage;
-
-        if (search != null && !search.isBlank()) {
-            log.info("Searching contacts for userId={} with term: {}", user.getId(), search);
-            contactPage = contactRepository.searchByUserId(user.getId(), search.trim(), pageable);
+        Page<Contact> contacts;
+        if (search != null && !search.trim().isEmpty()) {
+            contacts = contactRepository.searchContacts(userId, search.trim(), pageable);
         } else {
-            log.info("Fetching all contacts for userId={}, page: {}, size: {}", user.getId(), page, size);
-            contactPage = contactRepository.findByUserId(user.getId(), pageable);
+            contacts = contactRepository.findByUserId(userId, pageable);
         }
 
-        return contactPage.map(this::mapToResponseDto);
+        return contacts.map(this::convertToResponseDto);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public ContactResponseDto getContactById(Long id, String userEmail) {
-        User user = getUserByEmail(userEmail);
-        Contact contact = findContactOwnedByUser(id, user.getId());
-        log.info("Contact retrieved: id={} for userId={}", id, user.getId());
-        return mapToResponseDto(contact);
+    public Page<ContactResponseDto> getContactsByUser(Long userId, Pageable pageable) {
+        log.info("Fetching paginated contacts for user: {}", userId);
+        
+        Page<Contact> contacts = contactRepository.findByUserId(userId, pageable);
+        return contacts.map(this::convertToResponseDto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Page<ContactResponseDto> searchContacts(Long userId, String searchTerm, Pageable pageable) {
+        log.info("Searching contacts for user: {} with term: {}", userId, searchTerm);
+        
+        Page<Contact> contacts = contactRepository.searchContacts(userId, searchTerm, pageable);
+        return contacts.map(this::convertToResponseDto);
     }
 
     @Override
     @Transactional
-    public ContactResponseDto createContact(ContactRequestDto request, String userEmail) {
-        User user = getUserByEmail(userEmail);
-
-        Contact contact = new Contact();
-        contact.setFirstName(request.getFirstName());
-        contact.setLastName(request.getLastName());
-        contact.setTitle(request.getTitle());
-        contact.setUser(user);
-
-        applyEmails(contact, request.getEmails());
-        applyPhones(contact, request.getPhones());
-
-        Contact savedContact = contactRepository.save(contact);
-        log.info("Contact created successfully: id={} for userId={}",
-                savedContact.getId(), user.getId());
-        return mapToResponseDto(savedContact);
-    }
-
-    @Override
-    @Transactional
-    public ContactResponseDto updateContact(Long id, ContactRequestDto request, String userEmail) {
-        User user = getUserByEmail(userEmail);
-        Contact contact = findContactOwnedByUser(id, user.getId());
-
-        contact.setFirstName(request.getFirstName());
-        contact.setLastName(request.getLastName());
-        contact.setTitle(request.getTitle());
-
-        contact.getEmails().clear();
-        applyEmails(contact, request.getEmails());
-
-        contact.getPhones().clear();
-        applyPhones(contact, request.getPhones());
-
-        Contact savedContact = contactRepository.save(contact);
-        log.info("Contact updated successfully: id={} for userId={}", id, user.getId());
-        return mapToResponseDto(savedContact);
-    }
-
-    @Override
-    @Transactional
-    public void deleteContact(Long id, String userEmail) {
-        User user = getUserByEmail(userEmail);
-        Contact contact = findContactOwnedByUser(id, user.getId());
-        contactRepository.delete(contact);
-        log.info("Contact deleted successfully: id={} for userId={}", id, user.getId());
-    }
-
-    private void applyEmails(Contact contact, List<EmailDto> emailDtos) {
-        if (emailDtos == null) {
-            return;
-        }
-        for (EmailDto emailDto : emailDtos) {
-            Email email = new Email();
-            email.setEmail(emailDto.getEmail());
-            email.setLabel(emailDto.getLabel());
-            email.setContact(contact);
-            contact.getEmails().add(email);
-        }
-    }
-
-    private void applyPhones(Contact contact, List<PhoneDto> phoneDtos) {
-        if (phoneDtos == null) {
-            return;
-        }
-        for (PhoneDto phoneDto : phoneDtos) {
-            Phone phone = new Phone();
-            phone.setNumber(phoneDto.getNumber());
-            phone.setLabel(phoneDto.getLabel());
-            phone.setContact(contact);
-            contact.getPhones().add(phone);
-        }
-    }
-
-    private User getUserByEmail(String email) {
-        return userRepository.findByEmailIgnoreCase(email)
+    public ContactResponseDto createContact(Long userId, ContactRequestDto contactRequestDto) {
+        log.info("Creating new contact for user: {}", userId);
+        
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> {
-                    log.error("Authenticated user not found");
+                    log.error("User not found: {}", userId);
                     return new ResourceNotFoundException("User not found");
                 });
+
+        Contact contact = new Contact();
+        contact.setFirstName(contactRequestDto.getFirstName());
+        contact.setLastName(contactRequestDto.getLastName());
+        contact.setTitle(contactRequestDto.getTitle());
+        contact.setUser(user);
+
+        Contact savedContact = contactRepository.save(contact);
+        log.info("Contact created successfully with id: {}", savedContact.getId());
+
+        // Add emails if provided
+        if (contactRequestDto.getEmails() != null && !contactRequestDto.getEmails().isEmpty()) {
+            List<Email> emails = contactRequestDto.getEmails().stream()
+                    .map(emailDto -> {
+                        Email email = new Email();
+                        email.setEmail(emailDto.getEmail());
+                        email.setLabel(emailDto.getLabel());
+                        email.setContact(savedContact);
+                        return email;
+                    })
+                    .collect(Collectors.toList());
+            emailRepository.saveAll(emails);
+            savedContact.setEmails(emails);
+        }
+
+        if (contactRequestDto.getPhones() != null && !contactRequestDto.getPhones().isEmpty()) {
+            List<Phone> phones = contactRequestDto.getPhones().stream()
+                    .map(phoneDto -> {
+                        Phone phone = new Phone();
+                        phone.setNumber(phoneDto.getNumber());
+                        phone.setLabel(phoneDto.getLabel());
+                        phone.setContact(savedContact);
+                        return phone;
+                    })
+                    .collect(Collectors.toList());
+            phoneRepository.saveAll(phones);
+            savedContact.setPhones(phones);
+        }
+
+        return convertToResponseDto(savedContact);
     }
 
-    private Contact findContactOwnedByUser(Long contactId, Long userId) {
-        return contactRepository.findByIdAndUserId(contactId, userId)
+    @Override
+    @Transactional
+    public ContactResponseDto updateContact(Long userId, Long contactId, ContactRequestDto contactRequestDto) {
+        log.info("Updating contact: {} for user: {}", contactId, userId);
+        
+        Contact contact = contactRepository.findByIdAndUserId(contactId, userId)
                 .orElseThrow(() -> {
-                    log.warn("Contact not found or access denied: id={}, userId={}", contactId, userId);
-                    return new ResourceNotFoundException("Contact not found with id: " + contactId);
+                    log.error("Contact not found or unauthorized access: {} for user: {}", contactId, userId);
+                    return new UnauthorizedAccessException("You do not have permission to update this contact");
                 });
+
+        contact.setFirstName(contactRequestDto.getFirstName());
+        contact.setLastName(contactRequestDto.getLastName());
+        contact.setTitle(contactRequestDto.getTitle());
+
+        if (contactRequestDto.getEmails() != null) {
+            if (contact.getEmails() != null && !contact.getEmails().isEmpty()) {
+                emailRepository.deleteAll(contact.getEmails());
+            }
+
+            List<Email> emails = contactRequestDto.getEmails().stream()
+                    .map(emailDto -> {
+                        Email email = new Email();
+                        email.setEmail(emailDto.getEmail());
+                        email.setLabel(emailDto.getLabel());
+                        email.setContact(contact);
+                        return email;
+                    })
+                    .collect(Collectors.toList());
+
+            contact.setEmails(emailRepository.saveAll(emails));
+        }
+
+        if (contactRequestDto.getPhones() != null) {
+            if (contact.getPhones() != null && !contact.getPhones().isEmpty()) {
+                phoneRepository.deleteAll(contact.getPhones());
+            }
+
+            List<Phone> phones = contactRequestDto.getPhones().stream()
+                    .map(phoneDto -> {
+                        Phone phone = new Phone();
+                        phone.setNumber(phoneDto.getNumber());
+                        phone.setLabel(phoneDto.getLabel());
+                        phone.setContact(contact);
+                        return phone;
+                    })
+                    .collect(Collectors.toList());
+            contact.setPhones(phoneRepository.saveAll(phones));
+        }
+
+        Contact updatedContact = contactRepository.save(contact);
+        log.info("Contact updated successfully: {}", contactId);
+        
+        return convertToResponseDto(updatedContact);
     }
 
-    private ContactResponseDto mapToResponseDto(Contact contact) {
+    @Override
+    @Transactional
+    public void deleteContact(Long userId, Long contactId) {
+        log.info("Deleting contact: {} for user: {}", contactId, userId);
+        
+        Contact contact = contactRepository.findByIdAndUserId(contactId, userId)
+                .orElseThrow(() -> {
+                    log.error("Contact not found or unauthorized access: {} for user: {}", contactId, userId);
+                    return new UnauthorizedAccessException("You do not have permission to delete this contact");
+                });
+
+        contactRepository.delete(contact);
+        log.info("Contact deleted successfully: {}", contactId);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ContactResponseDto getContactById(Long userId, Long contactId) {
+        log.info("Fetching contact: {} for user: {}", contactId, userId);
+        
+        Contact contact = contactRepository.findByIdAndUserId(contactId, userId)
+                .orElseThrow(() -> {
+                    log.error("Contact not found or unauthorized access: {} for user: {}", contactId, userId);
+                    return new ResourceNotFoundException("Contact not found");
+                });
+
+        return convertToResponseDto(contact);
+    }
+
+    private ContactResponseDto convertToResponseDto(Contact contact) {
         ContactResponseDto dto = new ContactResponseDto();
         dto.setId(contact.getId());
         dto.setFirstName(contact.getFirstName());
@@ -167,24 +217,17 @@ public class ContactServiceImpl implements ContactService {
         dto.setUpdatedAt(contact.getUpdatedAt());
 
         if (contact.getEmails() != null) {
-            List<EmailDto> emailDtos = contact.getEmails().stream()
+            dto.setEmails(contact.getEmails().stream()
                     .map(email -> new EmailDto(email.getId(), email.getEmail(), email.getLabel()))
-                    .collect(Collectors.toList());
-            dto.setEmails(emailDtos);
-        } else {
-            dto.setEmails(new ArrayList<>());
+                    .collect(Collectors.toList()));
         }
 
         if (contact.getPhones() != null) {
-            List<PhoneDto> phoneDtos = contact.getPhones().stream()
+            dto.setPhones(contact.getPhones().stream()
                     .map(phone -> new PhoneDto(phone.getId(), phone.getNumber(), phone.getLabel()))
-                    .collect(Collectors.toList());
-            dto.setPhones(phoneDtos);
-        } else {
-            dto.setPhones(new ArrayList<>());
+                    .collect(Collectors.toList()));
         }
 
         return dto;
     }
 }
-
